--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Metronic React Demo 1" />
+  <meta name="description" content="Zeus app v1" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
-  <title>Metronic  - The World's #1 Selling React & Bootstrap Admin Template by KeenThemes</title>
+  <title>Isolatech  - ¡Simplifica, optimiza, crece!</title>
   <link rel="shortcut icon" href="media/logos/favicon.ico" />
   <link rel="stylesheet" id="layout-styles-anchor" href="/splash-screen.css" />
 </head>
