--- a/index.html
+++ b/index.html
@@ -46,5 +46,7 @@
   <div id="root-modals"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
-
+<div id="splash-screen" class="splash-screen">
+    Prueba
+  </div>
 </html>
