--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
   <script type="module" src="/src/main.tsx"></script>
 </body>
 <div id="splash-screen" class="splash-screen">
-    Prueba
+    -Prueba1
   </div>
 </html>
