--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="description" content="Zeus app v1" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
   <title>Isolatech  - ¡Simplifica, optimiza, crece!</title>
-  <link rel="shortcut icon" href="media/logos/favicon.ico" />
-  <link rel="stylesheet" id="layout-styles-anchor" href="/splash-screen.css" />
+  <link rel="shortcut icon" href="./public/media/logos/favicon.ico" />
+  <link rel="stylesheet" id="layout-styles-anchor" href="./public/splash-screen.css" />
 </head>
 
 <body id="kt_body" class="page-loading">
@@ -34,8 +34,8 @@
 
   <!--begin::Loading markup-->
   <div id="splash-screen" class="splash-screen">
-    <img src="media/logos/keenthemes-dark.svg" class="dark-logo" alt="Keenthemes dark logo" />
-    <img src="media/logos/keenthemes.svg" class="light-logo" alt="Keenthemes light logo" />
+    <img src="./public/media/logos/keenthemes-dark.svg" class="dark-logo" alt="Keenthemes dark logo" />
+    <img src="./public/media/logos/keenthemes.svg" class="light-logo" alt="Keenthemes light logo" />
     <div class="loader-wrapper">
       <span class="loader"></span>
       <span class="loading-text">Loading...</span>
